--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "supertest": "^4.0.2"
   },
   "scripts": {
-    "start": "node ./index.js",
+    "start": "node ./bin/web.js",
     "test": "mocha ./index.spec.js"
   },
   "repository": {
