--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "nodejs-api-server",
   "main": "index.js",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "morgan": "^1.9.1"
   },
